changed the button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="text-center">
           <br>
           <a href="https://arxiv.org/abs/2402.03530">paper</a>
-          <a href="https://protolab-writing-support.vercel.app/?paper=518920&atp=9078">live system (usename: iui2024; pwd:iui2024test)</a>
+          <a href="https://protolab-writing-support.vercel.app/?paper=518920&atp=9078">Try out the system: (usename: iui2024; pwd:iui2024test)</a>
         </div>
         <br>
         <div class="text-center">
